# bluechip-contracts

./: .gitignore  ADVERSARIAL_ATTACK_REVIEW.md  AUDIT_CODE_QUALITY.md  AUDIT_REPORT.md  AUDIT_SUMMARY.md  CODE_EFFICIENCY_ANALYSIS.md  Cargo.toml  FUZZING.md  FUZZ_REVIEW.md  Makefile  README.md  SECURITY_AUDIT.md  SECURITY_AUDIT_REPORT.md  _osmo_tx_helpers.sh  apply_oracle_eligibility.sh  create_commit_pool.sh  cross_threshold.sh  cw20_base.wasm  debug_cw20_swap.sh  debug_fee_state.sh  debug_liquidity.sh  debug_swap.sh  debug_swap_overflow.sh  deny.toml  deploy_full_stack_mock_oracle.sh  deploy_mainnet.sh  deploy_osmo_testnet.sh  deploy_osmo_testnet_anchor.sh  deploy_pool_local.sh  deploy_pool_simple.sh  deploy_pool_threshold_crossed.sh  deploy_robust.sh  deploy_sei_testnet.sh  factory_config_with_cw20.json  factory_init.json  fuzz.sh  instantiate.json  optimize.sh  osmo_testnet.env  package-lock.json  (+31 more)
.claude/: settings.json
.github/workflows/: ci.yml
airdrop/: Cargo.toml  Developing.md  NOTICE  README.md  airdrop.rs
airdrop/artifacts/: airdrop.wasm  checksums.txt  checksums_intermediate.txt
airdrop/src/: contract.rs  error.rs  helpers.rs  integration_tests.rs  lib.rs  msg.rs  query.rs  state.rs
config/: factory_deploy_result.txt  factory_init.json  factory_init_result.txt  pool_deploy_result.txt  pool_init.json  pool_init_result.txt
creator-pool/: Cargo.toml
creator-pool/examples/: schema.rs
creator-pool/src/: admin.rs  asset.rs  commit.rs  contract.rs  error.rs  generic_helpers.rs  lib.rs  liquidity.rs  liquidity_helpers.rs  mock_querier.rs  msg.rs  query.rs  state.rs  swap_helper.rs
creator-pool/src/commit/: distribution.rs  distribution_batch.rs  post_threshold.rs  pre_threshold.rs  threshold_crossing.rs  threshold_payout.rs
creator-pool/src/testing/: admin_tests.rs  audit_regression_tests.rs  creator_claim_tests.rs  liquidity_tests.rs  mod.rs  query_tests.rs  standard_pool_tests.rs  swap_tests.rs  threshold_tests.rs  update_pool_tests.rs
docs/: FEE_AND_ORACLE_MECHANICS.md  FRONTEND_MIGRATION.md  H14_SPLIT_PLAN.md  LAUNCH_RUNBOOK.md  ORACLE_CONSTANTS.md
expand-economy/: Cargo.toml
expand-economy/examples/: schema.rs
expand-economy/src/: attrs.rs  audit_tests.rs  contract.rs  denom.rs  error.rs  expand.rs  factory_query.rs  helpers.rs  lib.rs  migrate.rs  msg.rs  state.rs  tests.rs  timelock.rs
factory/: Cargo.toml  README.md  deployfactory.sh  factory_init.json
factory/artifacts/: checksums.txt  checksums_intermediate.txt  factory.wasm
factory/docker/: app.toml
factory/examples/: schema.rs
factory/src/: asset.rs  error.rs  execute.rs  internal_bluechip_price_oracle.rs  internal_bluechip_price_oracle_query.rs  internal_pool_oracle.rs  lib.rs  migrate.rs  mint_bluechips_pool_creation.rs  mock_querier.rs  msg.rs  pair.rs  pool.rs  pool_create_cleanup.rs  pool_creation_reply.rs  pool_struct.rs  pyth_types.rs  query.rs  reply.rs  response.rs  state.rs
factory/src/execute/: config.rs  oracle.rs  pool_lifecycle.rs  upgrades.rs
factory/src/execute/pool_lifecycle/: admin.rs  create.rs
factory/src/testing/: asset_tests.rs  audit_tests.rs  coverage_gap_tests.rs  mod.rs  oracle_mock_test.rs  oracle_repro.rs  tests.rs  update_tests.rs
frontend/: .env.local.example  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  App.tsx
frontend/src/components/: Commit.jsx  Commit.tsx  CommitTracker.jsx  CommitTracker.tsx  ContractConfig.jsx  ContractConfig.tsx  CreatePool.jsx  CreatePool.tsx  Fees.jsx  Fees.tsx  Liquidity.jsx  Liquidity.tsx  Navigation.tsx  Swap.jsx  Swap.tsx  WalletConnect.jsx  WalletConnect.tsx
frontend/src/components/modals/: BuyModal.tsx  CommitModal.tsx  SellModal.tsx  (+1 more)
frontend/src/pages/: CreatePool.tsx  Discover.tsx  Portfolio.tsx
frontend/src/types/: FrontendTypes.tsx
fuzz/: Cargo.toml
fuzz-stateful/: Cargo.toml  FINDINGS.md
fuzz-stateful/src/: actions.rs  factory_shim.rs  invariants.rs  lib.rs  position_nft.rs  world.rs
fuzz-stateful/tests/: fuzz_stateful.rs  proptest_pure_math.rs
fuzz/fuzz_targets/: fuzz_expand_economy_formula.rs  fuzz_swap_math.rs  fuzz_threshold_check.rs
keepers/: .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
keepers/src/: distribution-keeper.ts  oracle-keeper.ts
keepers/src/__tests__/: config.test.ts  decisions.test.ts  distribution-keeper.integration.test.ts  factory-balance-check.test.ts  mock-contracts.ts  oracle-keeper.integration.test.ts  oracle-keeper.mock-push.test.ts  prune-loop.test.ts  retry-notify-loop.test.ts
keepers/src/lib/: client.ts  config.ts  decisions.ts  distribution-loop.ts  executor.ts  logger.ts  oracle-loop.ts  prune-loop.ts  retry-notify-loop.ts  sleep.ts  types.ts
mockoracle/: Cargo.toml
mockoracle/src/: lib.rs  msg.rs  oracle_contract.rs
pool/: Cargo.toml  README.md  rust-toolchain.toml
pool/artifacts/: checksums.txt  checksums_intermediate.txt  faucet.wasm
pool/examples/: schema.rs
pool/src/: admin.rs  asset.rs  commit.rs  contract.rs  error.rs  generic_helpers.rs  lib.rs  liquidity.rs  liquidity_helpers.rs  mock_querier.rs  msg.rs  oracle.rs  query.rs  response.rs  state.rs  swap_helper.rs
pool/src/testing/: admin_tests.rs  audit_regression_tests.rs  liquidity_tests.rs  mod.rs  query_tests.rs  standard_pool_tests.rs  swap_tests.rs  tests.rs  threshold_tests.rs  update_pool_tests.rs
router/: Cargo.toml
router/examples/: schema.rs
router/src/: contract.rs  error.rs  execution.rs  lib.rs  msg.rs  simulation.rs  state.rs
router/src/testing/: integration_tests.rs  mock_pool.rs  mod.rs
standard-pool/: Cargo.toml
standard-pool/examples/: schema.rs
standard-pool/src/: contract.rs  error.rs  lib.rs  msg.rs  query.rs
standard-pool/src/testing/: accept_nft_ownership.rs  balance_verify.rs  claim_emergency.rs  collect_fees.rs  deposit_liquidity.rs  emergency_withdraw.rs  fixtures.rs  instantiation.rs  mod.rs  queries.rs  remove_liquidity.rs  swap.rs
swap-pool/: Cargo.toml  README.md
swap-pool/src/: integration_test.rs
tests/cli/: test.sh
