[workspace]
members = [
    "packages/*",
    "pool",
    "factory",
    "airdrop"
]

# Resolver has to be set explicitely in workspaces, see https://github.com/rust-lang/cargo/issues/9956
resolver = "2"

[workspace.package]
version = "1.0.0"

[workspace.package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/home/sweetdream/Work/coswasm/bluechip-contracts \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer:0.15.0 ./pool
"""

[workspace.dependencies]
cosmwasm-schema = "2.0.2"
cosmwasm-std = "2.0.2"
cosmwasm-storage = "1.1.0"
cw2 = "2.0.0"
cw-controllers = "2.0.0"
cw-multi-test = "2.0.0"
cw-storage-plus = "2.0.0"
cw-utils = "2.0.0"
schemars = "0.8.15"
semver = "1"
serde = { version = "1.0.188", default-features = false, features = ["derive"] }
thiserror = "2.0.2"
integer-sqrt = "0.1"
protobuf = { version = "2", features = ["with-bytes"] }
proptest = "1.0"

cw20 = "2.0.0"
cw20-base = { version = "2.0.0", features = ["library"] }
easy-addr = { path = "packages/easy-addr" }

[workspace.metadata.scripts]
build = "cargo build"
test = "cargo test"

[profile.release.package.pool]
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false