[workspace]
members = [
    "packages/*",
    "pool",
    "factory",
    "mockoracle",
]

resolver = "2"

[workspace.package]
version = "1.0.0"

[workspace.package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/home/sweetdream/Work/coswasm/bluechip-contracts \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer:0.15.0 ./pool
"""

[workspace.dependencies]
cosmwasm-schema = "1.5.11"
cosmwasm-std = "1.5.11"
cosmwasm-storage = "1.5.2"
cw2 = "1.0.1"
cw-controllers = "1.0.0"
cw-multi-test = "1.0.1"
cw-storage-plus = "1.1.0"
cw-utils = "1.0.2"
schemars = "0.8.15"
semver = "1"
serde = { version = "1.0.188", default-features = false, features = ["derive"] }
thiserror = "2.0.2"
integer-sqrt = "0.1"
protobuf = { version = "2", features = ["with-bytes"] }
proptest = "1.0"
cw721 = "0.18.0"
cw721-base = { version = "0.18.0", features = ["library"] }
cw20 = "1.0.1"
cw20-base = { version = "1.0.1", features = ["library"] }
easy-addr = { path = "packages/easy-addr" }

[workspace.metadata.scripts]
build = "cargo build"
test = "cargo test"

[profile.release.package.pool]
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
