[workspace]
members = [
    "packages/*",
    "creator-pool",
    "standard-pool",
    "factory",
    "mockoracle",
    "expand-economy",
    "router",
    "fuzz-stateful",
]
exclude = [
    # cargo-fuzz crate uses libFuzzer + nightly; excluded from the
    # default workspace so stable `cargo build` doesn't try to compile it.
    "fuzz",
]

resolver = "2"

[workspace.package]
version = "1.0.0"

[workspace.package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/home/sweetdream/Work/coswasm/bluechip-contracts \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer:0.16.0 ./creator-pool
"""

[workspace.dependencies]
sha2 = "0.10"
cosmwasm-schema = "2.2.0"
cosmwasm-std = "2.2.0"
cw2 = "2.0.0"
cw-controllers = "2.0.0"
cw-multi-test = { version = "=2.1.1", features = ["staking"] }
cw-storage-plus = "2.0.0"
cw-utils = "2.0.0"
schemars = "0.8.15"
semver = "1"
serde = { version = "1.0.188", default-features = false, features = ["derive"] }
thiserror = "2.0.2"
integer-sqrt = "0.1"
proptest = "1.0"
cw20 = "2.0.0"
cw20-base = { version = "2.0.0", features = ["library"] }
easy-addr = { path = "packages/easy-addr" }

[workspace.metadata.scripts]
build = "cargo build"
test = "cargo test"

# [profile.release.package.pool]
# codegen-units = 1
# incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = "z"
panic = "abort"
strip = true
codegen-units = 1
