[package]
name = "airdrop"
version = "1.1.0"
authors = ["dragondev93 <dragondev93@gmail.com>"]
edition = "2018"
description = "Bluechip Airdrop"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw2 = { version = "0.16.0" }
cosmwasm-std = { version = "1.1.0" }
cw-storage-plus = "0.15.0"
cosmwasm-schema = { version = "1.1.0" }
thiserror = { version = "1.0.26" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta" }
cw-multi-test = "0.13.4"
