[package]
name = "expand-economy"
version.workspace = true
authors = ["bestselection18 <noahsflood908@gmail.com>"]
edition = "2021"
description = "Bluechip Expand Economy"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pool-factory-interfaces = { path = "../packages/pool-factory-interfaces" }
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
thiserror = { workspace = true }
cw2 = { workspace = true }
cw-utils = { workspace = true }
serde = { workspace = true }
# C-EE-1: migrate handler parses cw2 stored version and current
# CONTRACT_VERSION as semver to reject downgrades. Same crate the
# pool / factory contracts already use for the same M-3 guard.
semver = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true }
