[package]
name = "expand-economy"
version.workspace = true
authors = ["bestselection18 <noahsflood908@gmail.com>"]
edition = "2021"
description = "Bluechip Expand Economy"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# Reserved for future mock-test infrastructure (currently a no-op).
# Kept symmetric with the factory/mockoracle feature so the docker
# optimizer can pass it uniformly.
mock = []
# Shortens config/withdrawal timelocks (172_800s → 120s) so integration
# shell tests can exercise the propose→execute path without waiting 48h.
# NEVER ship to production. Unit tests do NOT enable this.
integration_short_timing = []

[[package.metadata.optimizer.builds]]
name = "mock"
features = ["mock", "integration_short_timing"]

# Prod-timing variant used by verify_oracle_gates.sh — see the
# factory's matching [[package.metadata.optimizer.builds]] block.
[[package.metadata.optimizer.builds]]
name = "mock_only"
features = ["mock"]

[dependencies]
pool-factory-interfaces = { path = "../packages/pool-factory-interfaces" }
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
thiserror = { workspace = true }
cw2 = { workspace = true }
cw-utils = { workspace = true }
serde = { workspace = true }
# C-EE-1: migrate handler parses cw2 stored version and current
# CONTRACT_VERSION as semver to reject downgrades. Same crate the
# pool / factory contracts already use for the same M-3 guard.
semver = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true }
