[package]
name = "factory"

version.workspace = true
authors = ["bestselection18 <noahsflood908@gmail.com>"]
edition = "2021"
description = "Bluechip Factory"

license = "Apache-2.0"
repository = "https://github.com/bestselection18"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []        # Default features
mock = [] # Optional feature for mock code
library = []

[package.metadata.scripts]
optimize = { workspace = true }

[dependencies]
sha2 = {workspace = true}
pool-factory-interfaces = { path = "../packages/pool-factory-interfaces" }
cosmwasm-schema = { workspace = true }
integer-sqrt = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }

semver = {workspace = true}
cw721 = {workspace = true}
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
thiserror = { workspace = true }
protobuf = { workspace = true }
cw-utils = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true }

