[package]
name = "factory"

version.workspace = true
authors = ["bestselection18 <noahsflood908@gmail.com>"]
edition = "2021"
description = "Bluechip Factory"

license = "Apache-2.0"
repository = "https://github.com/bestselection18"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []        # Default features (no mock — keeps prod-path unit tests working)
mock = [] # Optional feature for mock code; pass via --features mock or via [package.metadata.optimizer]
library = []

# Passed to the cosmwasm/optimizer:0.16+ image's `bob` cargo wrapper so
# the docker-built artifact embeds the mock branch needed by the local
# integration shell scripts (see Makefile optimize-factory).
# `bob` requires `name`; the Makefile renames factory-mock.wasm → factory.wasm.
[[package.metadata.optimizer.builds]]
name = "mock"
features = ["mock"]

[package.metadata.scripts]
optimize = { workspace = true }

[dependencies]
sha2 = {workspace = true}
pool-factory-interfaces = { path = "../packages/pool-factory-interfaces" }
cosmwasm-schema = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }

semver = {workspace = true}
cosmwasm-std = { workspace = true }
serde = { workspace = true }
cw-storage-plus = { workspace = true }
thiserror = { workspace = true }
cw-utils = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true }

