[package]
name = "fuzz-stateful"
version.workspace = true
edition = "2021"
publish = false
description = "Stateful proptest harness for the bluechip contracts (factory + creator-pool + standard-pool + expand-economy + router + mockoracle)."

[lib]
crate-type = ["rlib"]

[features]
default = []

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
cw-utils = { workspace = true }
cw-multi-test = { workspace = true }
cw20 = { workspace = true }
cw20-base = { workspace = true }
serde = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
proptest = { workspace = true }
proptest-derive = "0.4"

# Contracts under test. Use `library` where the crate has the feature so
# the `#[entry_point]` exports don't double-register.
factory = { path = "../factory", features = ["library"] }
creator-pool = { path = "../creator-pool", features = ["library"] }
standard-pool = { path = "../standard-pool", features = ["library"] }
expand-economy = { path = "../expand-economy" }
oracle = { path = "../mockoracle" }
router = { path = "../router" }
pool-core = { path = "../packages/pool-core" }
pool-factory-interfaces = { path = "../packages/pool-factory-interfaces" }

[dev-dependencies]
proptest = { workspace = true }
