[package]
name = "oracle"

version.workspace = true
authors = ["bestselection18 <noahsflood908@gmail.com>"]
edition = "2021"
description = "Bluchip Pool"

license = "Apache-2.0"
repository = "https://github.com/bestselection18"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "artifacts/*",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# Mock oracle is a *test-only* contract — entry points must always be
# emitted, including when built via the docker optimizer (which doesn't
# pass --features). Defaulting `testing` on is safe here because no
# real production build of this crate exists.
default = ["testing"]
# for more explicit tests, cargo test --features=backtraces
backtraces = []
# use library feature to disable all instantiate/execute/query exports
library = []
# Gates instantiate/execute/query exports. Required for on-chain use.
testing = []

[package.metadata.scripts]
optimize = { workspace = true }

[dependencies]

cosmwasm-schema = { workspace = true }
integer-sqrt = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
cw20-base = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
thiserror = { workspace = true }
cw-utils = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true }
easy-addr = { workspace = true }
proptest = { workspace = true }

