[package]
name = "pool"
version = "1.0.0-alpha"
authors = ["bestselection18 <noahsflood908@gmail.com>"]
edition = "2018"
description = "Cosmwasm Pool"
license = "Apache-2.0"
repository = "https://github.com/bestselection18"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = []
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
integer-sqrt = "0.1"
cw2 = "2.0.0"
cw20 = "2.0.0"
cw20-base = { version = "2.0.0", features = ["library"] }
cosmwasm-std = { version = "2.2.0", features = [
  "cosmwasm_1_4",
  # Enable this if you only deploy to chains that have CosmWasm 2.0 or higher
  # "cosmwasm_2_0",
  # Or this if you only deploy to chains that have CosmWasm 2.1 or higher
  # "cosmwasm_2_1",
] }
cosmwasm-storage = "1.1.0"
cosmwasm-schema = "2.2.0"
cw-storage-plus = "2.0.0"
thiserror = "2.0.2"
protobuf = { version = "2", features = ["with-bytes"] }
cw-utils = "2.0.0"

[dev-dependencies]
cosmwasm-schema = { version = "2.2.0" }
cw-multi-test = "2.0.0"
proptest = "1.0"