[package]
name = "pool"

version.workspace = true
authors = ["bestselection18 <noahsflood908@gmail.com>"]
edition = "2021"
description = "Bluchip Pool"

license = "Apache-2.0"
repository = "https://github.com/bestselection18"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "artifacts/*",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = []
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = { workspace = true }

[dependencies]
sha2 = {workspace = true}
cosmwasm-schema = { workspace = true }
integer-sqrt = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }

cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
thiserror = { workspace = true }
cw721 = { workspace = true }

pool-factory-interfaces = { path = "../packages/pool-factory-interfaces" }
cw-utils = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true }
easy-addr = { workspace = true }
proptest = { workspace = true }

