[package]
name = "standard-pool"
version.workspace = true
authors = ["bestselection18 <noahsflood908@gmail.com>"]
edition = "2021"
description = "Bluechip standard xyk pool (no commit phase)"
license = "Apache-2.0"
repository = "https://github.com/bestselection18"

exclude = [
  "artifacts/*",
]

# 4b-i ships rlib-only — there are no `#[entry_point]`s yet, so a cdylib
# would produce an empty wasm that fails `cosmwasm-check` for missing
# `instantiate` / `execute` / `query` exports. Step 4b-ii adds the
# entry-point wrappers and switches this to `["cdylib", "rlib"]`.
[lib]
crate-type = ["rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = []
# Once 4b-ii lands, enabling this feature strips the `#[entry_point]`
# exports so this crate can be used as a plain Rust library in other
# crates' integration tests (e.g. `cw-multi-test` setups that need to
# instantiate a standard-pool without duplicating contract logic).
library = []

[package.metadata.scripts]
optimize = { workspace = true }

[dependencies]
cosmwasm-schema = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }

cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
thiserror = { workspace = true }

pool-factory-interfaces = { path = "../packages/pool-factory-interfaces" }
pool-core = { path = "../packages/pool-core" }
cw-utils = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true }
easy-addr = { workspace = true }
factory = { path = "../factory", features = ["library"] }
oracle = { path = "../mockoracle", features = ["library"] }
cw20-base = { workspace = true }
